@@ -5,6 +5,8 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
+### Changed
+- Use old non prerelease PyYaml version but use safe_load for security.
 
 ## [0.0.8] - 2019-03-01
 ### Added
